#### 2.4.0
Beta 1
    * Fix bug foreign key (plugin contact)
    * Widget_news - minor bug and update
        * Afficher les dernière news en sélectionnant/excluant des tags
        * Mise à jour du widget_news_widget
    * Remove unused function - frontend_db_block
    * Modification du logo de Magix CMS
    * Ajout de la finalisation de l'installation
    * Supprime les caches après installation
    * Aménagement du dashboard
        * Ajout des statistiques utilisateurs dashboard
        * Ajout des statistiques des langues dans le dashboard
    * Upgrade Bootstrap 2.2.3 => 2.3.1
    * Admin - Sidebar/col Left - CSS & Template - fixed width
    * Nettoyage des fichiers du catalogue (admin)

alpha 12
    * Update Skin tinyMCE Bootstrap
    * Fix bug création du fichier de configuration
    * Fix bug création des tables SQL
    * Ajout de la création de l'administrateur
    * Modification index installation (install #38)
    * Modification de l'analyse du système (install)
    * Modification de la création du fichier de configuration
    * Modification du système pour pinguer Google (sitemap)
    * Préparation des modifications du dossier d'installation
    * Modification du fichier sql d'installation
    * Révision googleping (sitemap)
    * Révision de l'API de création de sitemap (#44)
    * Fix bug message d'erreur pour menu select
    * Modification de la fonction de création du sitemap (contact)
    * Modification de la mise en page du module sitemap
    * Préparation du fichier JS pour la création des sitemaps
    * Révision du système de sitemap (Mise en page du module #44)
    * Mise à jour du fichier update_2.4.0.sql
    * Ajout des roles d'administration dans le fichier db.sql
    * Mise à jour du module googletools (#43)
    * Modification du widget googletools
    * Modification création de fichiers RSS news, plugins (#42)
    * Fix bug bootstrap.js (v2.2.3) avec fancybox (downgrade bootstrap.js 2.2.2)