@@ -1,0 +1,5 @@
+<p class="span6 alert alert-success fade in">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <span class="icon-ok"></span> La base de données à été mise à jour avec succès,
+    voir votre site <a href="{geturl}">{geturl}</a>
+</p>
